--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
         }
 
         .container {
+            position: relative;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             margin-bottom: 20px;
         }
 
@@ -82,6 +83,20 @@
             right: 20px;
             cursor: pointer;
             font-size: 24px;
+        }
+
+        .button-group {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+
+        .button-group .btn {
+            flex: 1;
+            min-width: 120px;
+            margin-bottom: 10px;
+            white-space: nowrap;
         }
 
         /* styles for small screens */
@@ -139,9 +154,11 @@
         <tbody id="score-table">
         </tbody>
     </table>
-    <button id="reset-button" class="btn btn-danger">Xóa Điểm</button>
-    <button id="history-button" class="btn btn-info">Xem Lịch Sử</button>
-    <button id="split-button" class="btn btn-warning">Chia Tiền</button>
+    <div class="button-group">
+        <button id="reset-button" class="btn btn-danger">Xóa Điểm</button>
+        <button id="history-button" class="btn btn-info">Xem Lịch Sử</button>
+        <button id="split-button" class="btn btn-warning">Chia Tiền</button>
+    </div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
